--- a/css/styles.css
+++ b/css/styles.css
@@ -141,8 +141,8 @@ p {
 
 .hero {
   display: block;
-
-  /* position: relative; */
+  margin: auto;
+  width: 1600px;
   text-align: center;
   height: 600px;
   padding-top: 200px;
@@ -271,7 +271,6 @@ p {
 }
 .work-list {
   display: flex;
-  /* position: relative; */
 }
 .work-list img {
   display: block;
@@ -343,12 +342,10 @@ p {
 }
 .team-text {
   justify-content: center;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 32px;
 }
 .social-list {
   display: flex;
-  padding-left: 30px;
 }
 .social-list li + li {
   margin-left: 10px;
@@ -373,7 +370,7 @@ p {
   justify-content: center;
   align-items: center;
   width: 170px;
-  height: 90px;
+  height: 92px;
   border-radius: 4%;
   border: 1px solid var(--icon-color);
   background: rgba(255, 255, 255, 0.1);
@@ -437,12 +434,11 @@ p {
   color: var(--accent-color);
 }
 .aside {
-  position: relative;
   display: flex;
+  align-items: baseline;
 }
 .social-media {
   margin-left: 70px;
-  margin-top: 10px;
 }
 .social-media p {
   font-weight: bold;
@@ -471,8 +467,8 @@ p {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 45px;
-  height: 45px;
+  width: 44px;
+  height: 44px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
 }
@@ -537,7 +533,8 @@ p {
 .button:focus {
   background-color: var(--accent-color);
   color: var(--title-color);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
+  box-shadow: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 /* ---------- Приклади проєктів ---------- */
