--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ p {
 .hero {
   display: block;
   margin: auto;
-  width: 1600px;
+  max-width: 1600px;
   text-align: center;
   height: 600px;
   padding-top: 200px;
@@ -533,8 +533,8 @@ p {
 .button:focus {
   background-color: var(--accent-color);
   color: var(--title-color);
-  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
-  box-shadow: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 /* ---------- Приклади проєктів ---------- */
@@ -562,6 +562,11 @@ p {
 }
 .pr-item:hover,
 .pr-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.pr-link:hover,
+.pr-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
