--- a/css/styles.css
+++ b/css/styles.css
@@ -560,10 +560,9 @@ p {
 .pr-item:nth-child(3n + 3) {
   flex-wrap: nowrap;
 }
-.pr-item:hover,
-.pr-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+
+.pr-link {
+  display: block;
 }
 .pr-link:hover,
 .pr-link:focus {
